--- a/src/css/main.css
+++ b/src/css/main.css
@@ -55,4 +55,11 @@ header {
 
 .weather {
   background-color: #4f4f4f;
-  color: #000; }
+  height: 50vh;
+  /* REMOVE THIS LATER */ }
+  .weather .cTemp {
+    font-size: 3rem; }
+  .weather .card {
+    border-radius: 3px;
+    border: 2px solid #333;
+    width: 25vw; }
