--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Fira+Mono|Libre+Barcode+39+Extended+Text');
+
 body {
   background-color: #010101;
   color: #fff;
@@ -81,17 +83,36 @@ header {
 
 
 .weather {
-  background-color: #4f4f4f;
-  height: 50vh; /* REMOVE THIS LATER */
+  display: grid;
+  grid-template-columns: 12.5vw  12.5vw  12.5vw  12.5vw  12.5vw; 
+  grid-template-rows: 50vh;
+
+ 
 
   .cTemp {
-    font-size: 3rem;
+    font-size: 5rem;
+  }
+  
+  .cWind, .cRain{
+    font-size: 1.5rem;
+    font-weight: bold;
   }
 
-  .card {
+  .cWind, .cRain, .cTemp {
+    -webkit-text-stroke: 1px black;
+  }
+
+
+
+  .card, .fcard {
+    margin: 3vh 3vw;
     border-radius: 3px;
     border: 2px solid #333;
-    width: 25vw; 
+    width: 15vw; 
+    height: 45vh;
+
+    background-size: cover;
+    background-repeat: no-repeat;
   
   }
 }
