--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -58,37 +58,8 @@ header {
   }
 }
 
-.links {
-  display: grid;
-  grid-template-columns: 33.3% 33.3% 33.3%;
-  grid-template-rows: 25vh;
-  padding-top: 5vh;
-  
-  font-size: 1rem;
-  ul {
-    margin-left: 12vw;
-  }
+.guide {
+  width: 20vw;
+  margin: 0 auto;
+  padding: 3vh 0 0 10vw;
 }
-
-@media (max-width: 950px) and (min-width: 700px) {
-  .links {
-    padding-left: 0;
-    grid-template-columns: 33.3% 33.3% 33.3%;
-
-    ul{
-      margin-left: 5vw;
-    }
-  }
-}
-
-@media (max-width: 699px) and (min-width: 300px) {
-  .links{
-    grid-template-columns: 33.3% 33.3% 33.3%;
-    padding-left: 0;
-    
-    ul {
-      margin-left: 3vw;
-    }
-  }
-}
-
