--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -59,7 +59,11 @@ header {
 }
 
 .guide {
-  width: 20vw;
+  display: flex;
   margin: 0 auto;
-  padding: 3vh 0 0 10vw;
+  padding-left: 10vw;
+  .guide1, .guide2, .guide3 {
+    margin: 0 auto;
+    padding: 3vh 5vw 0 0 ;
+  }
 }
